// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="bg-white px-3 w-40 h-60 shadow-2xl rounded-lg sm:m-2"
>
  <div
    className="flex flex-col justify-center"
    style={
      Object {
        "backfaceVisibility": "hidden",
      }
    }
  >
    <div
      className=""
    >
      <div
        className="flex flex-col w-full items-start"
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl undefined"
          />
          <h1
            className="text-4xl undefined"
          />
        </div>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl undefined"
        />
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl undefined"
          />
          <h1
            className="text-4xl undefined"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with classNames 1`] = `
<div
  className="bg-white px-3 w-40 h-60 shadow-2xl rounded-lg sm:m-2"
>
  <div
    className="flex flex-col justify-center"
    style={
      Object {
        "backfaceVisibility": "hidden",
      }
    }
  >
    <div
      className=""
    >
      <div
        className="flex flex-col w-full items-start"
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl undefined"
          />
          <h1
            className="text-4xl undefined"
          />
        </div>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl undefined"
        />
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl undefined"
          />
          <h1
            className="text-4xl undefined"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with text & colour 1`] = `
<div
  className="bg-white px-3 w-40 h-60 shadow-2xl rounded-lg sm:m-2"
>
  <div
    className="flex flex-col justify-center"
    style={
      Object {
        "backfaceVisibility": "hidden",
      }
    }
  >
    <div
      className=""
    >
      <div
        className="flex flex-col w-full items-start"
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl text-rose-500"
          >
            test
          </h1>
          <h1
            className="text-4xl text-rose-500"
          >
            test
          </h1>
        </div>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl text-rose-500"
        >
          test
        </h1>
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl text-rose-500"
          >
            test
          </h1>
          <h1
            className="text-4xl text-rose-500"
          >
            test
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;
